# GrommeR

./: .gitattributes  .gitignore  AGENTS.md  LICENSE  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  vitest.config.ts
.github/workflows/: tauri-auto-update-test.yml  tauri-builds.yml
app/: layout.tsx  page.tsx
components/: AnalyticsConsent.tsx  BugReportButton.tsx  GrommetForm.tsx  ImagePreview.tsx  PdfBoxesSection.tsx  PdfPreview.tsx  UpdatePromptDialog.tsx  UpdateStatus.tsx
lib/: analytics.ts  grommet-marks.test.ts  grommet-marks.ts  image-decode.test.ts  image-decode.ts  image-quality.test.ts  image-to-pdf.test.ts  image-to-pdf.ts  input-bytes.test.ts  input-bytes.ts  input-formats.test.ts  input-formats.ts  output-filename.test.ts  output-filename.ts  pdf-large-integration.test.ts  pdf-metadata.test.ts  pdf-metadata.ts  pdf-native.test.ts  pdf-native.ts  pdf-utils.test.ts  pdf-utils.ts  release-notes.ts  tauri-bridge.ts  tiff-jpeg-extract.ts
release-notes/: TEMPLATE.md  v0.2.10.md  v0.2.11.md  v0.2.9.md
scripts/: build-portable.cjs  copy-out-to-webik.cjs  create-tauri-latest-json.cjs  prepare-release-assets.cjs  sign-updater-artifacts.cjs
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.signing.conf.json  tauri.test.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  pdf_marks.rs
types/: grommet.ts  utif.d.ts
